# rag_sdk

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yaml  main.py  mypy_errors_2.txt  project_overview.md  pyproject.toml  requirements.txt  sample.txt
.agent/rules/: rag-sdk-rules-part1.md  rag-sdk-rules-part2.md  rag-sdk-rules-part3.md
.agent/workflows/: git-workflow-part1.md  git-workflow-part2.md
.claude/: settings.json
.claude/hooks/: log-implementation.sh  post-git-ops.sh  validate-git-commit.sh
git-hooks/: GIT-HOOKS-README.md  INSTALLATION.md  QUICK-REFERENCE.md  commit-msg  pre-commit  pre-push  setup-hooks.sh
implementation_plans/: 2026-02-14_18-06_should-have-tier2-advanced-features.md  2026-02-16_pdf-parser-research.md
rag_sdk/: __init__.py  core.py  settings.py
rag_sdk/config/: __init__.py  config.py
rag_sdk/docs/: 00-installation.md  01-quickstart.md  02-core-concepts.md  10-configuration.md  11-yaml-reference.md  20-document-loading.md  21-text-splitting.md  22-embeddings.md  23-vector-stores.md  24-llm-providers.md  25-retrieval-strategies.md  26-reranking.md  27-generation-strategies.md  30-api-rag.md  31-api-config.md  32-api-document.md  33-api-providers.md  40-recipes.md  41-extending.md  advanced_rag.md  api_reference.md  configuration.md  core_concepts.md  data_synchronization.md  debugging_and_monitoring.md  examples.md  index.md  installation.md  media_processing.md  production_guide.md  security_compliance.md
rag_sdk/document/: __init__.py  agentic_splitter.py  base.py  docling_parser.py  inspector.py  late_splitter.py  loader.py  models.py  pdf_geometry.py  pdf_models.py  pdf_parser.py  pdf_table_extractor.py  proposition_splitter.py  semantic_splitter.py  splitter.py
rag_sdk/embeddings/: __init__.py  base.py  cohere.py  gemini.py  local.py  openai.py  voyage.py
(+113 files in other folders)
